--- a/com.spacestation14.Launcher.yaml
+++ b/com.spacestation14.Launcher.yaml
@@ -42,7 +42,8 @@ modules:
     sources:
       - type: git
         url: https://github.com/space-wizards/SS14.Launcher.git
-        branch: master
+        tag: v0.34.0
+
       - sources/space-station-14-launcher-nuget-sources.json
       - sources/space-station-14-loader-nuget-sources.json
       - type: file
