--- a/com.spacestation14.Launcher.yaml
+++ b/com.spacestation14.Launcher.yaml
@@ -4,12 +4,12 @@ runtime: org.freedesktop.Platform
 runtime-version: '24.08'
 sdk: org.freedesktop.Sdk
 sdk-extensions:
-  - org.freedesktop.Sdk.Extension.dotnet9
+  - org.freedesktop.Sdk.Extension.dotnet10
 build-options:
-  prepend-path: "/usr/lib/sdk/dotnet9/bin"
-  append-ld-library-path: "/usr/lib/sdk/dotnet9/lib"
+  prepend-path: "/usr/lib/sdk/dotnet10/bin"
+  append-ld-library-path: "/usr/lib/sdk/dotnet10/lib"
   env:
-    PKG_CONFIG_PATH: "/app/lib/pkgconfig:/app/share/pkgconfig:/usr/lib/pkgconfig:/usr/share/pkgconfig:/usr/lib/sdk/dotnet9/lib/pkgconfig"
+    PKG_CONFIG_PATH: "/app/lib/pkgconfig:/app/share/pkgconfig:/usr/lib/pkgconfig:/usr/share/pkgconfig:/usr/lib/sdk/dotnet10/lib/pkgconfig"
 
 command: SS14.Launcher
 
@@ -37,14 +37,14 @@ modules:
   - name: dotnet
     buildsystem: simple
     build-commands:
-    - /usr/lib/sdk/dotnet9/bin/install.sh
+    - /usr/lib/sdk/dotnet10/bin/install.sh
 
   - name: space-station-14-launcher
     buildsystem: simple
     sources:
       - type: git
         url: https://github.com/space-wizards/SS14.Launcher.git
-        tag: v0.35.0
+        tag: v0.36.0
 
       - sources/space-station-14-launcher-nuget-sources.json
       - sources/space-station-14-loader-nuget-sources.json
@@ -55,9 +55,9 @@ modules:
       - dotnet publish SS14.Launcher/SS14.Launcher.csproj /p:FullRelease=True -c Release -r $(./rid.sh) --no-self-contained --source ./nuget-sources
       - dotnet publish SS14.Loader/SS14.Loader.csproj -c Release -r $(./rid.sh) --no-self-contained --source ./nuget-sources
       - mkdir -p ${FLATPAK_DEST}/bin
-      - cp -r ${FLATPAK_BUILDER_BUILDDIR}/SS14.Launcher/bin/Release/net9.0/$(./rid.sh)/publish/* ${FLATPAK_DEST}/bin
+      - cp -r ${FLATPAK_BUILDER_BUILDDIR}/SS14.Launcher/bin/Release/net10.0/$(./rid.sh)/publish/* ${FLATPAK_DEST}/bin
       - mkdir -p ${FLATPAK_DEST}/bin/loader
-      - cp -r ${FLATPAK_BUILDER_BUILDDIR}/SS14.Loader/bin/Release/net9.0/$(./rid.sh)/publish/* ${FLATPAK_DEST}/bin/loader
+      - cp -r ${FLATPAK_BUILDER_BUILDDIR}/SS14.Loader/bin/Release/net10.0/$(./rid.sh)/publish/* ${FLATPAK_DEST}/bin/loader
 
     # The SS14.Launcher project does not include an SVG icon file, but one is
     # available in the asset-dump repository.
