--- a/data/com.spacestation14.Launcher.desktop
+++ b/data/com.spacestation14.Launcher.desktop
@@ -4,6 +4,7 @@ Exec=wrapper.sh
 Icon=com.spacestation14.Launcher
 Type=Application
 Categories=Game;
+Comment=A sci-fi disaster simulator and role-playing game
 Keywords=ss14;
 StartupNotify=true
 Terminal=false
